	  in the auth backend, but does not yet have a user dir 
	  allocated. [873007] 
	- Fix bug introduced in vpopmail-5.4.0-pre2 that was preventing
	  ~vpopmail/etc/vpopmail.mysql from being installed [874776]
	- vpopbull was failing to create userdirs in some cases
	  (when the user exists in the auth backend, but did not have
	  a dir allocated yet) [816942]

	Ken Nonaka
	- Fixes to vpgsql.c to clear compile errors when 
	  --enable-ip-alias-domains is enabled. [874066] 

	Tom Collins
	- Check for comments earlier in deliver_mail().
	- Remove unused --enable-defaultquota and code related to it.
	  (Replaced by settings in vlimits.default.) [869411]
	- Remove references to --eanble-defaultquota in documentation.
	- vdelivermail.c: Consistent return values in deliver_mail().
	- More updates to build files. [874831]
	- Apply patch from http://www.fehcom.de/qmail/smtpauth.html
	  to fix CRAM-MD5 SMTP AUTH in vchkpw. [871493]

	Bill Shupp
	- Add -o option to vmoduser to set V_OVERRIDE flag. [875505]

	Casey Zacek
	- Create maildirsize file in vsetuserquota(). [869457]

	Anders Brander
	- Allow optional length for random passwords in vadduser and
	  vadddomain. [848228]

5.4.0-rc1 - released 1-Jan-04

	Michael Bowe
	- Code fixes and documentation work for LDAP module. 
	  Incl updated README.ldap, vldap.c, vldap.h, ldap/slapd.conf, 
	  ldap/vpopmail.ldif. [863881] [811000] [864643]
	- Rewrote the README.mysql based on my web based guide.
	- Documentation tweaks for README.pgsql, README.roamingusers.

	Tom Collins
	- Remove unused var (cp), change random/srandom to rand/srand in
	  vpopmail.c to remove compiler warnings.
	- Fix Makefile to use correct owner/group/permissions for 
	  install-strip.
	- Fix configure to indicate that --enable-auth-logging is default.
 
5.4.0-pre2 - released 21-Dec-03

	*** Note that the configure option for setting the authentication
	*** module has changed.  Instead of --enable-mysql, use
	*** --enable-auth-module=mysql.

	Casey Zacek