@@ -15,6 +15,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- vpopbull was failing to create userdirs in some cases
 	  (when the user exists in the auth backend, but did not have
 	  a dir allocated yet) [816942]
+	- clearopensmtp was using USE_MYSQL rather than USE_SQL to 
+	  determine where the roaming IPs were being stored [876016]
 
 	Ken Nonaka
 	- Fixes to vpgsql.c to clear compile errors when 
